--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,10 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+
+// Add the Google services Gradle plugin
+apply plugin: 'com.google.gms.google-services'
+
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -48,10 +52,20 @@ android {
         applicationId "com.example.scheduler"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+
+        //CHANGED HERE: APP THREW AN ERROR
+        // (old) minSdkVersion flutter.minSdkVersion
+        // (old) targetSdkVersion flutter.targetSdkVersion
+
+        // new
+         minSdkVersion 21
+         targetSdkVersion 30
+
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        // ALSO ADDED THIS ONE
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -69,4 +83,10 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:32.1.0')
+
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
