--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_picker: ^2.1.0
-
+  google_sign_in: ^6.1.3
+  firebase_auth: ^4.6.2
+  firebase_core: ^2.13.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
