--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_sign_in: ^6.1.3
   firebase_auth: ^4.6.2
   firebase_core: ^2.13.1
+  modal_progress_hud_nsn: ^0.4.0
+  flash: ^3.0.5
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
