--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flash: ^3.0.5
   intl:
   date_picker_timeline: ^1.2.3
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
