--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl:
   date_picker_timeline: ^1.2.3
   auto_size_text: ^3.0.0
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
