--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   date_picker_timeline: ^1.2.3
   auto_size_text: ^3.0.0
   shared_preferences: ^2.1.2
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
