--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   auto_size_text: ^3.0.0
   shared_preferences: ^2.1.2
   flutter_spinkit: ^5.2.0
+  animations: ^2.0.7
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
