--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   shared_preferences: ^2.1.2
   flutter_spinkit: ^5.2.0
   animations: ^2.0.7
+  flutter_local_notifications: ^14.1.1
+  timezone: ^0.9.2
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
@@ -74,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - Assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
