--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   animations: ^2.0.7
   flutter_local_notifications: ^14.1.1
   timezone: ^0.9.2
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
