--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_local_notifications: ^14.1.1
   timezone: ^0.9.2
   flutter_svg: ^2.0.7
+  editable: ^2.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
