--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   timezone: ^0.9.2
   flutter_svg: ^2.0.7
   editable: ^2.0.0
+  excel: ^2.1.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
